# MLLM

./: .env.sample  .gitignore  README.md  dataloader.py  generate_embedding.py  justfile  model.py  pyproject.toml  requirements.txt  ruff.toml  run.py  run_unimodal.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: demo.md  experiment.md
analysis/: visualization_wholes_comparison.py
analysis/paper/: ablation_study_skip_connection.ipynb  uni_tff_table_comparison.py
benchmarks/TextFusionHTS/: emb_learning.py  news_dataset.ipynb  notes.txt
benchmarks/unimodal_models/: exp.py  run.py
data_provider/: data_factory.py  data_loader.py  data_loader_gen_emb.py  embedding_dataloader.py
dataset/: Agriculture.csv  Climate.csv  Economy.csv  Energy.csv  Health.csv  Security.csv  SocialGood.csv  Traffic.csv
exp/: exp_basic.py  exp_forecasting.py
layers/: AutoCorrelation.py  Autoformer_EncDec.py  Conv_Blocks.py  CrossModal.py  Crossformer_EncDec.py  ETSformer_EncDec.py  FourierCorrelation.py  MultiWaveletCorrelation.py  Pyraformer_EncDec.py  SelfAttention_Family.py  StandardNorm.py  Transformer_EncDec.py
llm/: Prepare.ipynb  gen_prompt_emb.py  generate_embedding.py  text_embedder.py  time_series_prompt_embedder.py
logs/: gather_results.py  wo_skip_connection.csv
scripts/: fusion_cross_attention.sh  fusion_cross_attention_adding_prior.sh  fusion_cross_attention_patchTST.sh  unimodal_forecasting.sh
ts/: PatchTST.py  iTransformer.py
utils/: augmentation.py  dtw.py  dtw_metric.py  gather_results.py  losses.py  print_args.py  timefeatures.py  tools.py
(+19 files in other folders)
