[project]
name = "mllm"
version = "0.1.0"
description = "Multimodal LLM research project"
authors = [
    { name = "aiseed", email = "aiseed@aiseed.kr" }
]
dependencies = [
    "torch==2.9.1",
    "transformers==4.56.1",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scipy>=1.13.0",
    "scikit-learn",
    "h5py",
    "tqdm>=4.66.0",
    "mlflow>=3.9.0",
    "tensorboard",
    "reformer_pytorch",
    "einops",
    "sympy",
    "huggingface_hub",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sentencepiece>=0.2.1",
    "protobuf>=6.33.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.14.8",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
